fixed issue with navbar covering titles

--- a/client/src/components/Home/landing-page/landingpage.scss
+++ b/client/src/components/Home/landing-page/landingpage.scss
@@ -3,7 +3,7 @@
    width: 100vw;
    display: block;
    background-color: #0a1929;
-   margin-bottom: 5rem;
+   // margin-bottom: 5rem;
 }
 
 #scroll-down-text > path,
