--- a/client/src/components/Home/main-section/Main.scss
+++ b/client/src/components/Home/main-section/Main.scss
@@ -11,6 +11,7 @@
       @include set-size(100%);
       @include flex-column();
       min-height: 100vh;
+      padding-top: 15rem;
       // padding-left: 12vw;
       // padding-right: 2vw;
       // padding-top: 1rem;
