--- a/client/src/components/Home/main-section/project-page/project-list/ProjectList.scss
+++ b/client/src/components/Home/main-section/project-page/project-list/ProjectList.scss
@@ -1,5 +1,9 @@
 @use '../../../../App.scss' as *;
 
+#project-list {
+   padding-top: 5rem;
+}
+
 .project-list {
    @include flex-column();
    align-items: center;
